# itmo-md-2025

./: .gitignore  .gitmodules  .pre-commit-config.yaml  DEPLOYMENT.md  DOCKER_USAGE.md  QUICK_START.md  README.md  REQUIREMENTS_CHECKLIST.md  SERVER_QUICKSTART.md  SETUP_DATA.md  SUBMISSION.md  docker-compose.yaml  fix_permissions.sh  verify_setup.sh
.github/: README.md
.github/workflows/: app_ci.yml  deploy.yml
airflow/: .env.example  .gitignore  Dockerfile  README.md  docker-compose-airflow.yaml  docker-compose.yml  requirements.txt
airflow/dags/: collect_data_dag.py  dbt_transformation_dag.py  el_process_dag.py  el_process_logic.py
airflow/dags/utils/: db_connections.py  el_process_logic.py  mongo_utils.py  postgres_utils.py
analysis/: .env.example  README.md  crypto_data_analysis.ipynb  requirements.txt
app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/app/: database.py  main.py
app/app/api/: __init__.py  binance.py  news.py
app/app/core/: __init__.py  logging.py  settings.py
app/app/service/: binance_service.py  news_service.py
app/app/services/: binance_service.py  news_service.py
app/src/: database.py
app/src/core/: logging.py  settings.py
app/src/services/: binance_service.py  news_service.py
context/: home_work_1.md  practice_task.md
dbt/: README.md
dbt_project/: .env.example  DEPLOYMENT.md  README.md  dbt_project.yml  package-lock.yml  profiles.yml  requirements.txt
dbt_project/models/: sources.yml
dbt_project/models/dm/: dm_crypto_market_overview.sql  dm_news_impact_analysis.sql  dm_schema.yml
dbt_project/models/ods/: ods_binance_daily_agg.sql  ods_news_enriched.sql  ods_schema.yml
dbt_project/models/stg/: stg_binance_klines.sql  stg_news_articles.sql  stg_schema.yml
docs/: hw1.md
dwh/: .env.example  README.md  docker-compose.yml
elementary/: .env.example  README.md  docker-compose.yml
