[project]
name = "crypto-data-collector"
version = "0.1.0"
description = "FastAPI application for collecting cryptocurrency data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.6.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.1.0",
    "aiologger>=0.7.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

